renamed cmon_lexer.h to cmon_tokens.h, replaced lexer with single function cmon_tokenize and added immutable cmon_tokens type to traverse tokens for clearer separation of responsibilities and ownership semantics

--- a/meson.build
+++ b/meson.build
@@ -7,9 +7,9 @@ lib_src = [
     'cmon/cmon_ast.c',
     'cmon/cmon_err_report.c',
     'cmon/cmon_hashmap.c',
-    'cmon/cmon_lexer.c',
     'cmon/cmon_src.c',
     'cmon/cmon_str_builder.c',
+    'cmon/cmon_tokens.c',
     'cmon/cmon_util.c',
 ]
 
