--- a/meson.build
+++ b/meson.build
@@ -7,10 +7,12 @@ lib_src = [
     'cmon/cmon_ast.c',
     'cmon/cmon_err_report.c',
     'cmon/cmon_hashmap.c',
+    'cmon/cmon_modules.c',
     'cmon/cmon_parser.c',
     'cmon/cmon_src.c',
     'cmon/cmon_str_builder.c',
     'cmon/cmon_tokens.c',
+    'cmon/cmon_type.c',
     'cmon/cmon_util.c',
 ]
 
