fleshing out symbol api and initial impl

--- a/meson.build
+++ b/meson.build
@@ -11,6 +11,7 @@ lib_src = [
     'cmon/cmon_parser.c',
     'cmon/cmon_src.c',
     'cmon/cmon_str_builder.c',
+    'cmon/cmon_symbols.c',
     'cmon/cmon_tokens.c',
     'cmon/cmon_types.c',
     'cmon/cmon_util.c',
