added public idx buffer manager so it can be used in multiple places

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,7 @@ lib_src = [
     'cmon/cmon_dep_graph.c',
     'cmon/cmon_err_report.c',
     'cmon/cmon_hashmap.c',
+    'cmon/cmon_idx_buf_mng.c',
     'cmon/cmon_modules.c',
     'cmon/cmon_parser.c',
     'cmon/cmon_resolver.c',
