--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,7 @@ lib_src = [
     'cmon/cmon_ast.c',
     'cmon/cmon_builder_st.c',
     'cmon/cmon_codegen.c',
+    'cmon/cmon_codegen_c.c',
     'cmon/cmon_dep_graph.c',
     'cmon/cmon_err_handler.c',
     'cmon/cmon_err_report.c',
