progress on log

--- a/meson.build
+++ b/meson.build
@@ -17,6 +17,7 @@ lib_src = [
     'cmon/cmon_hashmap.c',
     'cmon/cmon_idx_buf_mng.c',
     'cmon/cmon_ir.c',
+    'cmon/cmon_log.c',
     'cmon/cmon_modules.c',
     'cmon/cmon_parser.c',
     'cmon/cmon_resolver.c',
