progress on cmon.c

--- a/meson.build
+++ b/meson.build
@@ -32,12 +32,13 @@ lib_src = [
 ]
 
 thread_dep = dependency('threads')
-cmon_lib = library('cmon', lib_src, include_directories : inc_dirs, dependencies: thread_dep)
+cmon_lib = static_library('cmon', lib_src, include_directories : inc_dirs, dependencies: thread_dep)
 
 cmon_bin = executable('cmon',
     ['cmon.c'], 
     link_with: [cmon_lib], 
     c_args : ['-fsanitize=address', '-Wall', '-std=gnu11'], 
-    link_args : '-fsanitize=address')
+    link_args : '-fsanitize=address',
+    install : true)
 
 subdir('tests')
