removed cmon_src_dir, replaced with cmon_dir_parse that also houses dependency dir parsing. Added tini parsing from file. Initial dependency folder parsing that works with overwrites

--- a/meson.build
+++ b/meson.build
@@ -10,6 +10,7 @@ lib_src = [
     'cmon/cmon_codegen.c',
     'cmon/cmon_codegen_c.c',
     'cmon/cmon_dep_graph.c',
+    'cmon/cmon_dir_parse.c',
     'cmon/cmon_err_handler.c',
     'cmon/cmon_err_report.c',
     'cmon/cmon_exec.c',
